QR code for profile vCard

--- a/src/nubes/Gemfile
+++ b/src/nubes/Gemfile
@@ -23,6 +23,7 @@ gem "stimulus-rails"
 gem "bcrypt"
 gem "jwt"
 gem "rbnacl"
+gem "rqrcode"
 gem "trailblazer-rails"
 gem "trailblazer-operation"
 gem "view_component"
