--- a/src/nubes/Gemfile
+++ b/src/nubes/Gemfile
@@ -21,9 +21,14 @@ gem "turbo-rails"
 gem "stimulus-rails"
 
 gem "bcrypt"
+gem "dry-validation"
 gem "jwt"
+gem "graphql"
+gem "graphiql-rails"
 gem "rbnacl"
+gem "reform"
 gem "rqrcode"
+gem "trailblazer-macro-contract"
 gem "trailblazer-rails"
 gem "trailblazer-operation"
 gem "view_component"
@@ -39,6 +44,7 @@ group :development do
   gem "web-console"
   gem "hotwire-livereload"
   gem "rubocop"
+  gem "rubocop-graphql"
   gem "rubocop-rails"
   gem "rubocop-rspec"
 end
